@@ -79,7 +79,7 @@
 		Cards are flipped from the Stock to the Waste by three.  If the last
 		flip has less than three cards, that many cards are flipped for that
 		move only.  When Stock is empty, move all cards in Waste back to the
-		Stock, maintaining order.  You can go through the deck three times.
+		Stock, maintaining order.  
 	</para>
 	<para>
 		Foundations are built up in suit from the base card (first card dealt to
