@@ -86,8 +86,9 @@
 
   <sect2>Options</sect2>
   <para>
-    Three card deals: If checked, the Stock will deal three each time.
-    Otherwise, the Stock will deal singly into the Waste.
+    Three card deals: If checked, the Stock will deal three each time
+  with an unlimited number of redeals.
+    Otherwise, the Stock will deal singly into the Waste with two redeals.
   </para>
 
   <sect2>Scoring</sect2>
