@@ -1,3 +1,8 @@
+2005-06-07  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* C/canfield.xml: 
+	* C/klondike.xml: Slight changes to the rules we use.
+
 2005-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* C/*.xml: Fix up the section id tags to work with the new
