@@ -1,3 +1,11 @@
+2005-06-07  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* sol.scm (flip-stock): Interpret a negative flip-limit as infinity.
+
+	* rules/canfield.scm: Allow infinite redeals.
+
+	* rules/klondike.scm: Allow infinite redeals in 3-card games.
+
 2005-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* sol.c: Change Dennis' patch once more and just use the game name
